Fix scrollbar on the editor

--- a/src/components/editor/Editor.css
+++ b/src/components/editor/Editor.css
@@ -1,6 +1,6 @@
 div.DraftEditor-root {
   
-    height: 1000px;
+    height: 770px;
     width: 99%;
     padding-top: 5%;
     overflow-y: scroll;
@@ -20,7 +20,6 @@ div.DraftEditor-root {
   .ButtonGroup {
     font-family: monospace;
   }
-
 
   .fancy {
 
